<resources>
    <!-- Strings related to app -->
    <string name="app_name">페스타고</string>

    <!--date format-->
    <string name="ticket_entry_date_time_dot_format">yyyy.MM.dd</string>

    <!--ticket state-->
    <string name="all_ticket_state_before_entry">입장전</string>
    <string name="all_ticket_state_after_entry">입장완료</string>
    <string name="all_ticket_state_away">외출중</string>

    <!--ticket type-->
    <string name="all_ticket_type_student">재학생용</string>
    <string name="all_ticket_type_visitor">방문객용</string>
    <string name="all_ticket_type_other">기타</string>

    <!-- splash -->
    <string name="splash_app_update_request_dialog_title">업데이트 알림</string>
    <string name="splash_app_update_request_dialog_message">새로운 페스타고를 사용하기 위해 업데이트 해주세요.</string>
    <string name="splash_app_update_denied">업데이트 후 정상 사용가능합니다.</string>
    <string name="splash_app_default_error_message">페스타고 실행 중 문제가 발생했습니다. 페스타고로 문의해주세요.</string>

    <!-- Strings related to main -->
    <string name="main_btn_ticket_disable_time">HH:mm 티켓 활성화</string>
    <string name="main_btn_ticket_enable_time">티켓 제시</string>
    <string name="main_tv_ticket_before_entry">입장 전</string>
    <string name="main_tv_ticket_after_entry">입장 완료</string>
    <string name="main_tv_ticket_away">외출중</string>

    <!-- Strings related to ticket entry-->
    <string name="ticket_entry_tv_before_entry">입장 전</string>
    <string name="ticket_entry_tv_after_entry">입장 완료</string>
    <string name="ticket_entry_tv_away">외출중</string>
    <string name="ticket_entry_tv_error">티켓 조회 과정에 문제가 발생했습니다.</string>

    <!-- Strings related to home -->
    <string name="home_bottom_navigation_festival">축제 목록</string>
    <string name="home_bottom_navigation_ticket">티켓 목록</string>
    <string name="home_bottom_navigation_user">마이페이지</string>
    <string name="home_notification_permission_denied">알림 권한을 거부했습니다 :(</string>
    <string name="home_back_pressed">한 번 더 누르면 앱이 종료됩니다</string>

    <!-- Strings related to ticket reserve-->
    <string name="ticket_reserve_tv_date_range">%1s ~ %1s</string>
    <string name="ticket_reserve_tv_date_range_format">yyyy.MM.dd</string>
    <string name="ticket_reserve_tv_start_time">MM.dd (E) HH:mm</string>
    <string name="ticket_reserve_tv_line_up_title">[라인업]</string>
    <string name="ticket_reserve_tv_ticket_count_title">[예매 가능 티켓]</string>
    <string name="ticket_reserve_tv_ticket_count">%1$s(%2$s/%3$s)</string>
    <string name="ticket_reserve_tv_ticket_count_separator">", "</string>
    <string name="ticket_reserve_tv_auth_guide_student">⚠️ 재학생용 티켓예매를 위해 사전에 학교 인증이 필요합니다.</string>
    <string name="ticket_reserve_tv_error_page">축제 조회에 실패했습니다.</string>
    <string name="ticket_reserve_btn_reserve_ticket">티켓 예매</string>
    <string name="ticket_reserve_tv_ticket_count_format">(%1$s/%2$s)</string>
    <string name="ticket_reserve_tv_btn_reserve_ticket">예매 하기</string>
    <string name="ticket_reserve_tv_btn_reserve_ticket_not_open">MM월 dd일 HH:mm 오픈예정</string>
    <string name="ticket_reserve_tv_signin">로그인 후 예매</string>
    <string name="ticket_reserve_tv_ticket_type_prompt">예매 유형을 선택해주세요</string>
    <string name="ticket_reserve_dialog_sold_out">공연이 매진되었습니다</string>
    <string name="ticket_reserve_dialog_over_amount">이미 예매한 공연입니다</string>
    <string name="ticket_reserve_dialog_need_student_verification">학생 인증이 필요합니다</string>
    <string name="ticket_reserve_dialog_unknown">알 수 없는 오류가 발생했습니다</string>

    <!-- Strings related to festival list -->
    <string name="festival_list_tv_date_format">yyyy.MM.dd</string>
    <string name="festival_list_chip_progress">진행중</string>
    <string name="festival_list_chip_planned">진행 예정</string>
    <string name="festival_list_chip_end">지난 축제</string>
    <string name="festival_list_tv_error">축제 조회에 실패했습니다.</string>
    <string name="festival_list_tv_empty">조회된 축제가 없습니다.</string>
    <string name="festival_list_tv_date_range_format">%s - %s</string>

    <!-- Strings related to ticket list -->
    <string name="ticket_list_tv_ticket_list">티켓 목록</string>
    <string name="ticket_list_tv_date_time_format">yyyy.MM.dd HH:mm</string>
    <string name="ticket_list_btn_ticket_disable_time">HH:mm 티켓 활성화</string>
    <string name="ticket_list_btn_ticket_entry">입장하기</string>
    <string name="ticket_list_tv_ticket_number">%d번</string>
    <string name="ticket_list_tv_ticket_stage_start_time">무대 시작 시간 %s</string>
    <string name="ticket_list_tv_ticket_entry_time">입장 시작 시간 %s</string>
    <string name="ticket_list_tv_no_ticket">사용할 수 있는 티켓이 없습니다</string>
    <string name="ticket_list_tv_error">티켓 목록 조회에 실패했습니다.</string>

    <!-- Strings related to ok dialog -->
    <string name="ok_dialog_btn_ok">확인</string>
    <string name="ok_dialog_btn_cancel">취소</string>

    <!-- Strings related to mypage -->
    <string name="mypage_btn_kakao">카카오로 로그인</string>
    <string name="mypage_tv_signin_description">페스타고로\n대학교 축제를 즐겨보세요.</string>

    <!-- Strings related to reservation complete -->
    <string name="reservation_complete_tv_reservation_complete">예매에 성공했습니다!</string>
    <string name="reservation_complete_tv_ticket_number_prompt">나의 티켓 번호</string>
    <string name="reservation_complete_tv_time_format">HH:mm</string>
    <string name="reservation_complete_tv_date_format">yyyy.MM.dd</string>
    <string name="reservation_complete_tv_entry_able_time">[입장 가능 시간] %s</string>

    <!-- Strings related to my page -->
    <string name="my_page_tv_account_title">계정</string>
    <string name="my_page_tv_school_authorization">학교 인증</string>
    <string name="my_page_tv_logout">로그아웃</string>
    <string name="my_page_tv_withdrawal">탈퇴하기</string>
    <string name="my_page_tv_reserve_list_title">예매 목록</string>
    <string name="my_page_tv_stage_start_time_title">[무대 시작 시간]</string>
    <string name="my_page_tv_entry_start_time_title">[입장 시작 시간]</string>
    <string name="my_page_tv_number_title">[입장 번호]</string>
    <string name="my_page_tv_reserve_at_title">[예매 일자]</string>
    <string name="my_page_tv_more">더보기 ></string>
    <string name="my_page_no_ticket">예매 내역이 존재하지 않습니다.</string>
    <string name="my_page_datatime_format">yyyy.MM.dd. HH:mm</string>
    <string name="my_page_tv_error">마이페이지 정보 받아오기에 실패했습니다.</string>

    <!-- Strings related to ticket history -->
    <string name="ticket_history_tv_title">예매 목록</string>
    <string name="ticket_history_tv_ticket_start_time_prefix">[무대 시작 시간]</string>
    <string name="ticket_history_tv_ticket_entry_time_prefix">[입장 시작 시간]</string>
    <string name="ticket_history_tv_ticket_number_prefix">[입장 번호]</string>
    <string name="ticket_history_tv_ticket_number_format">%d번</string>
    <string name="ticket_history_tv_ticket_ticketing_time_prefix">[예매 일자]</string>
    <string name="ticket_history_tv_error">티켓 조회에 실패했습니다.</string>
    <string name="ticket_history_tv_empty">조회된 티켓이 없습니다.</string>

    <!-- Strings related to confirm delete dialog -->
    <string name="confirm_delete_dialog_title">정말 탈퇴하시겠어요?</string>
    <string name="confirm_delete_dialog_message">탈퇴 버튼 선택 시, 계정은 삭제되며 복구되지 않습니다.</string>
    <string name="confirm_delete_dialog_yes">탈퇴</string>
    <string name="confirm_delete_dialog_no">취소</string>

    <!-- Strings related to student verification -->

    <string name="student_verification_tie_username">학교 이메일</string>
    <string name="student_verification_tie_verification_code">인증 코드</string>
    <string name="student_verification_btn_student_verification">인증 번호 받기</string>
    <string name="student_verification_btn_student_verification_confirm">인증 번호 확인</string>
    <string name="student_verification_tv_email_format">\@%s</string>
    <string name="student_verification_tv_timer_format">mm:ss</string>
    <string name="student_verification_tv_error">학교 정보 받아오기에 실패했습니다.</string>

    <!-- Strings related to select school -->
    <string name="select_school_btn_next">다음</string>
    <string name="select_school_til_select_school">학교 선택</string>
    <string name="select_school_tv_error_message">학교 목록 불러오기에 실패했습니다.</string>
    <string name="select_school_tv_select_school">학교 선택</string>

    <!-- Strings related to fcm -->
    <string name="entry_alert_channel_name">공연 입장 알림</string>

</resources>
