<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_festival"
        android:enabled="true"
        android:icon="@drawable/ic_bottom_navigation_festival"
        android:iconTint="@color/md_theme_light_secondary"
        android:title="@string/home_bottom_navigation_festival" />
    <item
        android:id="@+id/item_ticket"
        android:enabled="true"
        android:icon="@drawable/ic_festago_logo_foreground"
        android:iconTint="@color/md_theme_light_secondary"
        android:title="@string/home_bottom_navigation_ticket" />
    <item
        android:id="@+id/item_mypage"
        android:enabled="true"
        android:icon="@drawable/ic_bottom_navigation_user"
        android:iconTint="@color/md_theme_light_secondary"
        android:title="@string/home_bottom_navigation_user" />
</menu>
