<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="uiState"
            type="com.festago.festago.presentation.ui.selectschool.SelectSchoolUiState" />

        <variable
            name="vm"
            type="com.festago.festago.presentation.ui.selectschool.SelectSchoolViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.selectschool.SelectSchoolActivity">

        <ProgressBar
            visibility="@{uiState.shouldShowLoading}"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glStart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glEnd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSelectSchool"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            visibility="@{uiState.shouldShowSuccess}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/glEnd"
            app:layout_constraintStart_toEndOf="@id/glStart"
            app:layout_constraintTop_toTopOf="parent">

            <AutoCompleteTextView
                android:id="@+id/actvSelectSchool"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:hint="@string/select_school_til_select_school"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnVerificationConfirm"
            style="@style/btnFesta"
            visibility="@{uiState.shouldShowSuccess}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:enabled="@{uiState.enableNext}"
            android:onClick="@{() -> vm.showStudentVerification()}"
            android:text="@string/select_school_btn_next"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/glEnd"
            app:layout_constraintStart_toStartOf="@id/glStart" />

        <TextView
            visibility="@{uiState.shouldShowError}"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/select_school_tv_error_message" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
